AUTOMAKE_OPTIONS=foreign
SUBDIRS=src build include
ACLOCAL_AMFLAGS=-I m4
pkgconfigdir = $(prefix)/lib/pkgconfig
pkgconfig_DATA = $(PACKAGE).pc

EXTRA_DIST=autogen.sh README README.zh-cn.md README.md LICENSE.TXT \
docs/CHANGES.md docs/CHANGES.zh-cn.md docs/FAQ.md \
docs/FAQ.zh-cn.md \
docs/CodingStyle.zh-cn.md \
test/README.zh-cn \
test/Makefile.in \
test/Makefile.am \
test/helloworld.c \
test/helloworld.css \
test/helloworld.xml \
test/test.c \
test/test.h \
test/testtouch.c \
test/test_string.c \
test/test_string_render.c \
test/test_widget_render.c \
test/test_char_render.c \
test/test_css_parser.css \
test/test_css_parser.xml \
test/test_css_parser.c \
test/test_image_reader.c \
test/test_image_reader.bmp \
test/test_image_reader.jpg \
test/test_image_reader.png
