AUTOMAKE_OPTIONS=foreign
SUBDIRS=font kernel draw gui misc
##一些需要安装的头文件
# Headers which are installed to support the library
INSTINCLUDES=LCUI.h\
config.h \
display.h \
graph.h \
draw.h \
font.h \
surface.h \
ime.h \
input.h \
thread.h \
misc.h

# Headers to install
pkginclude_HEADERS = $(INSTINCLUDES)
pkgincludedir=$(prefix)/include/LCUI/
