AUTOMAKE_OPTIONS=foreign subdir-objects
noinst_LTLIBRARIES = libgui.la
AM_CFLAGS = -I$(abs_top_srcdir)/include
libgui_la_SOURCES =\
widget.c		\
widget_base.c		\
widget_event.c		\
widget_prototype.c	\
widget_style.c		\
widget_task.c		\
widget_paint.c 		\
widget_background.c	\
widget_border.c		\
widget_shadow.c		\
css_parser.c		\
css_library.c		\
css_fontstyle.c		\
builder.c		\
metrics.c		\
widget/textview.c	\
widget/textcaret.c	\
widget/textedit.c	\
widget/sidebar.c	\
widget/scrollbar.c	\
widget/button.c
