AUTOMAKE_OPTIONS=foreign subdir-objects
noinst_LTLIBRARIES = libgui.la
AM_CFLAGS = -I$(abs_top_srcdir)/include $(CODE_COVERAGE_CFLAGS)
libgui_la_SOURCES =\
widget.c          	\
widget_base.c		\
widget_attribute.c	\
widget_id.c		\
widget_class.c		\
widget_status.c		\
widget_size.c 		\
widget_tree.c		\
widget_helper.c		\
widget_layout.c		\
widget_event.c		\
widget_prototype.c	\
widget_style.c		\
widget_task.c		\
widget_paint.c 		\
widget_background.c	\
widget_border.c		\
widget_shadow.c		\
css_parser.c		\
css_rule_font_face.c	\
css_library.c		\
css_fontstyle.c		\
builder.c		\
metrics.c		\
widget/textview.c	\
widget/textcaret.c	\
widget/textedit.c	\
widget/sidebar.c	\
widget/scrollbar.c	\
widget/anchor.c		\
widget/button.c		\
widget/canvas.c
