AUTOMAKE_OPTIONS=foreign subdir-objects
AM_CFLAGS = -I$(abs_top_srcdir)/include
noinst_LTLIBRARIES = libplatform.la
libplatform_la_SOURCES = linux/linux_keyboard.c linux/linux_display.c \
linux/linux_events.c linux/linux_mouse.c linux/linux_x11events.c \
linux/linux_x11mouse.c linux/linux_x11keyboard.c linux/linux_x11display.c \
linux/linux_fbdisplay.c windows/windows_events.c linux/linux_fbdisplay.c \
windows/windows_keyboard.c windows/windows_display.c windows/windows_mouse.c

