AUTOMAKE_OPTIONS=foreign
AM_CFLAGS = -I$(abs_top_srcdir)/include $(CODE_COVERAGE_CFLAGS)
noinst_LTLIBRARIES = libutil.la
libutil_la_SOURCES = rbtree.c dict.c linkedlist.c time.c event.c rect.c \
string.c strlist.c strpool.c dirent.c parse.c steptimer.c logger.c math.c \
task.c uri.c charset.c object.c
