AUTOMAKE_OPTIONS=foreign 
INCLUDES = -I$(abs_top_srcdir)/include 
noinst_LTLIBRARIES = libwidget.la
libwidget_la_SOURCES = \
	LCUI_ActiveBox.c	\
	LCUI_Button.c		\
	LCUI_CheckBox.c		\
	LCUI_Label.c		\
	LCUI_Menu.c		\
	LCUI_PictureBox.c	\
	LCUI_ProgressBar.c	\
	LCUI_RadioButton.c	\
	LCUI_TextBox.c		\
	LCUI_Window.c		\
	LCUI_ScrollBar.c
