AUTOMAKE_OPTIONS=foreign 
INCLUDES = -I$(top_builddir)/include 
noinst_PROGRAMS = mora
EXTRA_DIST= README drawable/btn_down.png \
drawable/btn_normal.png \
drawable/icon.png \
drawable/jsb_j.png \
drawable/think.png \
drawable/btn_focus.png \
drawable/btn_over.png \
drawable/jsb_b.png \
drawable/jsb_s.png

mora_SOURCES = mora.c 
mora_LDADD   = $(top_builddir)/src/libLCUI.la 

